compiler/tests/fail/typing/x86-64/for_not_int.jazz
export fn main(reg ui32 a b) -> reg ui32 {
  for a = 0 to b {
  }
  return a;
}
